--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad1d5bee0a3c4d05b21f582f696995d9",
+       "model_id": "6a517564b1bc4791a61ceb58dd8aa2a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -26,8 +26,8 @@
     "from ipywidgets import interact, FloatSlider\n",
     "\n",
     "# Função que calcula a temperatura da CPU com resfriamento apenas por água\n",
-    "def simular_resfriamento_agua(T_cpu, taxa_resfriamento, T_amb, uso_cpu, passo_tempo):\n",
-    "    geracao_calor = uso_cpu * 0.01  # 0.1 é um fator de escala (quanto maior, mais calor gerado)\n",
+    "def simular_resfriamento_watercooler(T_cpu, taxa_resfriamento, T_amb, uso_cpu, passo_tempo):\n",
+    "    geracao_calor = uso_cpu * 0.01  # 0.01 é um fator de escala (quanto maior, mais calor gerado)\n",
     "    variacao_temperatura = -taxa_resfriamento * (T_cpu - T_amb) + geracao_calor\n",
     "    nova_T_cpu = T_cpu + variacao_temperatura * passo_tempo\n",
     "    energia_gasta = geracao_calor * passo_tempo  # Energia gerada pela CPU\n",
@@ -49,19 +49,19 @@
     "    tempo_simulacao = 600  # Tempo total de simulação (segundos)\n",
     "    tempo = np.arange(0, tempo_simulacao, passo_tempo)\n",
     "\n",
-    "    temperaturas_agua = []\n",
+    "    temperaturas_watercooler = []\n",
     "    temperaturas_peltier = []\n",
-    "    energia_total_agua = 0  # Energia acumulada para resfriamento apenas por água\n",
+    "    energia_total_watercooler = 0  # Energia acumulada para resfriamento apenas por água\n",
     "    energia_total_peltier = 0  # Energia acumulada para resfriamento com Peltier\n",
     "\n",
     "    # Simulação das duas abordagens\n",
     "    for t in tempo:\n",
     "        # Resfriamento apenas com água\n",
-    "        temperaturas_agua.append(T_cpu_agua)\n",
-    "        T_cpu_agua, energia_gasta_agua = simular_resfriamento_agua(\n",
+    "        temperaturas_watercooler.append(T_cpu_agua)\n",
+    "        T_cpu_agua, energia_gasta_watercooler = simular_resfriamento_watercooler(\n",
     "            T_cpu_agua, taxa_resfriamento, T_amb, uso_cpu_percentual, passo_tempo\n",
     "        )\n",
-    "        energia_total_agua += energia_gasta_agua\n",
+    "        energia_total_watercooler += energia_gasta_watercooler\n",
     "\n",
     "        # Resfriamento com água + Peltier\n",
     "        temperaturas_peltier.append(T_cpu_peltier)\n",
@@ -72,32 +72,32 @@
     "\n",
     "    # Gráfico de resfriamento com água\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(tempo, temperaturas_agua, label=\"Resfriamento Água\", color=\"blue\")\n",
+    "    plt.plot(tempo, temperaturas_watercooler, label=\"Resfriamento Water Cooler\", color=\"blue\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
     "    plt.ylabel(\"Temperatura da CPU (°C)\")\n",
-    "    plt.title(\"Simulação de Resfriamento de CPU com Água\")\n",
+    "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Taxa de Resfriamento {taxa_resfriamento:.3f} ,Uso CPU (%) {uso_cpu_percentual}\")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
-    "    print(f\"Energia total gasta (Resfriamento Água): {energia_total_agua:.2f} J\")\n",
+    "    print(f\"Energia total gasta (Resfriamento Water Cooler): {energia_total_watercooler:.2f} J\")\n",
     "    # Gráfico de resfriamento com água + Peltier\n",
     "    plt.figure(figsize=(10, 6))\n",
-    "    plt.plot(tempo, temperaturas_peltier, label=\"Resfriamento Água + Peltier\", color=\"red\")\n",
+    "    plt.plot(tempo, temperaturas_peltier, label=\"Resfriamento Water Cooler + Peltier\", color=\"red\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
     "    plt.ylabel(\"Temperatura da CPU (°C)\")\n",
-    "    plt.title(\"Simulação de Resfriamento de CPU com Água + Peltier\")\n",
+    "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler + Peltier\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Efeito Peltier {efeito_peltier:.2f} ,Uso CPU (%) {uso_cpu_percentual} \")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
     "    # Exibindo os valores totais de energia consumida\n",
     "    \n",
-    "    print(f\"Energia total gasta (Resfriamento Água + Peltier): {energia_total_peltier:.2f} J\")\n",
+    "    print(f\"Energia total gasta (Resfriamento Water Cooler + Peltier): {energia_total_peltier:.2f} J\")\n",
     "\n",
     "# Widgets interativos\n",
     "interact(plotar_simulacao,\n",
     "         T_cpu_inicial=FloatSlider(value=30, min=20, max=100, step=1, description=\"Temp. Inicial CPU (°C)\"),\n",
-    "         taxa_resfriamento=FloatSlider(value=0.04, min=0.001, max=0.05, step=0.001, description=\"Taxa de Resfriamento\"),\n",
+    "         taxa_resfriamento=FloatSlider(value=0.044, min=0.001, max=0.1, step=0.001, description=\"Taxa de Resfriamento\"),\n",
     "         efeito_peltier=FloatSlider(value=0.2, min=0, max=0.5, step=0.01, description=\"Efeito Peltier\"),\n",
     "         T_amb=FloatSlider(value=30, min=0, max=50, step=1, description=\"Temp. Ambiente (°C)\"),\n",
     "         uso_cpu_percentual=FloatSlider(value=50, min=0, max=100, step=1, description=\"Uso CPU (%)\"));\n"
