--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -43,7 +43,7 @@
     "\n",
     "# Função para simular e plotar a temperatura da CPU e calcular consumo energético\n",
     "def plotar_simulacao(T_cpu_inicial, taxa_resfriamento, efeito_peltier, T_amb, uso_cpu_percentual):\n",
-    "    T_cpu_agua = T_cpu_inicial  # Temperatura inicial com resfriamento apenas por água\n",
+    "    T_cpu_watercooler = T_cpu_inicial  # Temperatura inicial com resfriamento apenas por água\n",
     "    T_cpu_peltier = T_cpu_inicial  # Temperatura inicial com resfriamento por água + Peltier\n",
     "    passo_tempo = 1  # Passo de tempo (segundos)\n",
     "    tempo_simulacao = 600  # Tempo total de simulação (segundos)\n",
@@ -57,9 +57,9 @@
     "    # Simulação das duas abordagens\n",
     "    for t in tempo:\n",
     "        # Resfriamento apenas com água\n",
-    "        temperaturas_watercooler.append(T_cpu_agua)\n",
-    "        T_cpu_agua, energia_gasta_watercooler = simular_resfriamento_watercooler(\n",
-    "            T_cpu_agua, taxa_resfriamento, T_amb, uso_cpu_percentual, passo_tempo\n",
+    "        temperaturas_watercooler.append(T_cpu_watercooler)\n",
+    "        T_cpu_watercooler, energia_gasta_watercooler = simular_resfriamento_watercooler(\n",
+    "            T_cpu_watercooler, taxa_resfriamento, T_amb, uso_cpu_percentual, passo_tempo\n",
     "        )\n",
     "        energia_total_watercooler += energia_gasta_watercooler\n",
     "\n",
