--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -25,7 +25,7 @@
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interact, FloatSlider\n",
     "\n",
-    "# Função que calcula a temperatura da CPU com resfriamento apenas por água\n",
+    "# Função que calcula a temperatura da CPU com resfriamento apenas por Water Cooler\n",
     "def simular_resfriamento_watercooler(T_cpu, taxa_resfriamento, T_amb, uso_cpu, passo_tempo):\n",
     "    geracao_calor = uso_cpu * 0.01  # 0.01 é um fator de escala (quanto maior, mais calor gerado)\n",
     "    variacao_temperatura = -taxa_resfriamento * (T_cpu - T_amb) + geracao_calor\n",
@@ -43,34 +43,34 @@
     "\n",
     "# Função para simular e plotar a temperatura da CPU e calcular consumo energético\n",
     "def plotar_simulacao(T_cpu_inicial, taxa_resfriamento, efeito_peltier, T_amb, uso_cpu_percentual):\n",
-    "    T_cpu_watercooler = T_cpu_inicial  # Temperatura inicial com resfriamento apenas por água\n",
-    "    T_cpu_peltier = T_cpu_inicial  # Temperatura inicial com resfriamento por água + Peltier\n",
+    "    T_cpu_watercooler = T_cpu_inicial  # Temperatura inicial com resfriamento apenas por Water Cooler\n",
+    "    T_cpu_peltier = T_cpu_inicial  # Temperatura inicial com resfriamento por Water Cooler + Peltier\n",
     "    passo_tempo = 1  # Passo de tempo (segundos)\n",
     "    tempo_simulacao = 600  # Tempo total de simulação (segundos)\n",
     "    tempo = np.arange(0, tempo_simulacao, passo_tempo)\n",
     "\n",
     "    temperaturas_watercooler = []\n",
     "    temperaturas_peltier = []\n",
-    "    energia_total_watercooler = 0  # Energia acumulada para resfriamento apenas por água\n",
+    "    energia_total_watercooler = 0  # Energia acumulada para resfriamento apenas por Water Cooler\n",
     "    energia_total_peltier = 0  # Energia acumulada para resfriamento com Peltier\n",
     "\n",
     "    # Simulação das duas abordagens\n",
     "    for t in tempo:\n",
-    "        # Resfriamento apenas com água\n",
+    "        # Resfriamento apenas com Water Cooler\n",
     "        temperaturas_watercooler.append(T_cpu_watercooler)\n",
     "        T_cpu_watercooler, energia_gasta_watercooler = simular_resfriamento_watercooler(\n",
     "            T_cpu_watercooler, taxa_resfriamento, T_amb, uso_cpu_percentual, passo_tempo\n",
     "        )\n",
     "        energia_total_watercooler += energia_gasta_watercooler\n",
     "\n",
-    "        # Resfriamento com água + Peltier\n",
+    "        # Resfriamento com Water Cooler + Peltier\n",
     "        temperaturas_peltier.append(T_cpu_peltier)\n",
     "        T_cpu_peltier, energia_gasta_peltier = simular_resfriamento_com_peltier(\n",
     "            T_cpu_peltier, taxa_resfriamento, T_amb, efeito_peltier, uso_cpu_percentual, passo_tempo\n",
     "        )\n",
     "        energia_total_peltier += energia_gasta_peltier\n",
     "\n",
-    "    # Gráfico de resfriamento com água\n",
+    "    # Gráfico de resfriamento com Water Cooler\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(tempo, temperaturas_watercooler, label=\"Resfriamento Water Cooler\", color=\"blue\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
@@ -80,7 +80,7 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "    print(f\"Energia total gasta (Resfriamento Water Cooler): {energia_total_watercooler:.2f} J\")\n",
-    "    # Gráfico de resfriamento com água + Peltier\n",
+    "    # Gráfico de resfriamento com Water Cooler + Peltier\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(tempo, temperaturas_peltier, label=\"Resfriamento Water Cooler + Peltier\", color=\"red\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
