--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6a517564b1bc4791a61ceb58dd8aa2a6",
+       "model_id": "85adea7115ad459b97437ff4f1faf2c3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,6 +75,7 @@
     "    plt.plot(tempo, temperaturas_watercooler, label=\"Resfriamento Water Cooler\", color=\"blue\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
     "    plt.ylabel(\"Temperatura da CPU (°C)\")\n",
+    "    plt.yticks(range(20,110,5))\n",
     "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Taxa de Resfriamento {taxa_resfriamento:.3f} ,Uso CPU (%) {uso_cpu_percentual}\")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
@@ -85,7 +86,8 @@
     "    plt.plot(tempo, temperaturas_peltier, label=\"Resfriamento Water Cooler + Peltier\", color=\"red\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
     "    plt.ylabel(\"Temperatura da CPU (°C)\")\n",
-    "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler + Peltier\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Efeito Peltier {efeito_peltier:.2f} ,Uso CPU (%) {uso_cpu_percentual} \")\n",
+    "    plt.yticks(range(20,110,5))\n",
+    "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler + Peltier\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Efeito Peltier {efeito_peltier:.3f} ,Uso CPU (%) {uso_cpu_percentual} \")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
@@ -98,7 +100,7 @@
     "interact(plotar_simulacao,\n",
     "         T_cpu_inicial=FloatSlider(value=30, min=20, max=100, step=1, description=\"Temp. Inicial CPU (°C)\"),\n",
     "         taxa_resfriamento=FloatSlider(value=0.044, min=0.001, max=0.1, step=0.001, description=\"Taxa de Resfriamento\"),\n",
-    "         efeito_peltier=FloatSlider(value=0.2, min=0, max=0.5, step=0.01, description=\"Efeito Peltier\"),\n",
+    "         efeito_peltier=FloatSlider(value=0.06, min=0, max=0.08, step=0.01, description=\"Efeito Peltier\"),\n",
     "         T_amb=FloatSlider(value=30, min=0, max=50, step=1, description=\"Temp. Ambiente (°C)\"),\n",
     "         uso_cpu_percentual=FloatSlider(value=50, min=0, max=100, step=1, description=\"Uso CPU (%)\"));\n"
    ]
