--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85adea7115ad459b97437ff4f1faf2c3",
+       "model_id": "dc3d81872d544c47b34e5c2a0ca6a71c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -69,13 +69,16 @@
     "            T_cpu_peltier, taxa_resfriamento, T_amb, efeito_peltier, uso_cpu_percentual, passo_tempo\n",
     "        )\n",
     "        energia_total_peltier += energia_gasta_peltier\n",
-    "\n",
+    "    #Controle eixo y\n",
+    "    max_y=110\n",
+    "    min_y=20\n",
+    "    intervalo_y=5\n",
     "    # Gráfico de resfriamento com Water Cooler\n",
     "    plt.figure(figsize=(10, 6))\n",
     "    plt.plot(tempo, temperaturas_watercooler, label=\"Resfriamento Water Cooler\", color=\"blue\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
     "    plt.ylabel(\"Temperatura da CPU (°C)\")\n",
-    "    plt.yticks(range(20,110,5))\n",
+    "    plt.yticks(range(min_y,max_y,intervalo_y))\n",
     "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Taxa de Resfriamento {taxa_resfriamento:.3f} ,Uso CPU (%) {uso_cpu_percentual}\")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
@@ -86,7 +89,7 @@
     "    plt.plot(tempo, temperaturas_peltier, label=\"Resfriamento Water Cooler + Peltier\", color=\"red\")\n",
     "    plt.xlabel(\"Tempo (segundos)\")\n",
     "    plt.ylabel(\"Temperatura da CPU (°C)\")\n",
-    "    plt.yticks(range(20,110,5))\n",
+    "    plt.yticks(range(min_y,max_y,intervalo_y))\n",
     "    plt.title(f\"Simulação de Resfriamento de CPU com Water Cooler + Peltier\\n Temp. Inicial CPU (°C) {T_cpu_inicial:.2f} ,Temp. Ambiente (°C) {T_amb:.2f} ,Efeito Peltier {efeito_peltier:.3f} ,Uso CPU (%) {uso_cpu_percentual} \")\n",
     "    plt.legend()\n",
     "    plt.grid(True)\n",
@@ -100,7 +103,7 @@
     "interact(plotar_simulacao,\n",
     "         T_cpu_inicial=FloatSlider(value=30, min=20, max=100, step=1, description=\"Temp. Inicial CPU (°C)\"),\n",
     "         taxa_resfriamento=FloatSlider(value=0.044, min=0.001, max=0.1, step=0.001, description=\"Taxa de Resfriamento\"),\n",
-    "         efeito_peltier=FloatSlider(value=0.06, min=0, max=0.08, step=0.01, description=\"Efeito Peltier\"),\n",
+    "         efeito_peltier=FloatSlider(value=0.06, min=0, max=0.12, step=0.01, description=\"Efeito Peltier\"),\n",
     "         T_amb=FloatSlider(value=30, min=0, max=50, step=1, description=\"Temp. Ambiente (°C)\"),\n",
     "         uso_cpu_percentual=FloatSlider(value=50, min=0, max=100, step=1, description=\"Uso CPU (%)\"));\n"
    ]
