--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -83,6 +83,7 @@
     "    plt.legend()\n",
     "    plt.grid(True)\n",
     "    plt.show()\n",
+    "    # Exibindo os valor total de energia consumida pelo Water Cooler\n",
     "    print(f\"Energia total gasta (Resfriamento Water Cooler): {energia_total_watercooler:.2f} J\")\n",
     "    # Gráfico de resfriamento com Water Cooler + Peltier\n",
     "    plt.figure(figsize=(10, 6))\n",
@@ -95,7 +96,7 @@
     "    plt.grid(True)\n",
     "    plt.show()\n",
     "\n",
-    "    # Exibindo os valores totais de energia consumida\n",
+    "    # Exibindo os valor total de energia consumida pelo Water Cooler e Peltier\n",
     "    \n",
     "    print(f\"Energia total gasta (Resfriamento Water Cooler + Peltier): {energia_total_peltier:.2f} J\")\n",
     "\n",
