--- a/fisica.ipynb
+++ b/fisica.ipynb
@@ -8,12 +8,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dc3d81872d544c47b34e5c2a0ca6a71c",
+       "model_id": "3752d753766c4a8c9232a19069193eb0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(FloatSlider(value=30.0, description='Temp. Inicial CPU (°C)', min=20.0, step=1.0), Float…"
+       "interactive(children=(FloatSlider(value=30.0, description='Temp. Inicial CPU (°C)', max=50.0, min=20.0, step=1…"
       ]
      },
      "metadata": {},
@@ -102,9 +102,9 @@
     "\n",
     "# Widgets interativos\n",
     "interact(plotar_simulacao,\n",
-    "         T_cpu_inicial=FloatSlider(value=30, min=20, max=100, step=1, description=\"Temp. Inicial CPU (°C)\"),\n",
+    "         T_cpu_inicial=FloatSlider(value=30, min=20, max=50, step=1, description=\"Temp. Inicial CPU (°C)\"),\n",
     "         taxa_resfriamento=FloatSlider(value=0.044, min=0.001, max=0.1, step=0.001, description=\"Taxa de Resfriamento\"),\n",
-    "         efeito_peltier=FloatSlider(value=0.06, min=0, max=0.12, step=0.01, description=\"Efeito Peltier\"),\n",
+    "         efeito_peltier=FloatSlider(value=0.06, min=0, max=0.18, step=0.01, description=\"Efeito Peltier\"),\n",
     "         T_amb=FloatSlider(value=30, min=0, max=50, step=1, description=\"Temp. Ambiente (°C)\"),\n",
     "         uso_cpu_percentual=FloatSlider(value=50, min=0, max=100, step=1, description=\"Uso CPU (%)\"));\n"
    ]
